--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         <section id="home" class="hero">
             <div class="video-background">
                 <video autoplay muted loop>
-                    <source src="attached_assets/20250303_1840_Mountain Snowfall Serenity_simple_compose_01jnfge1qyfc79cxwt8kytxmrv.mp4" type="video/mp4">
+                    <source src="20250303_1840_Mountain Snowfall Serenity_simple_compose_01jnfge1qyfc79cxwt8kytxmrv.mp4" type="video/mp4">
                 </video>
                 <div class="video-overlay"></div>
             </div>
@@ -422,7 +422,7 @@
                         <p>I'm passionate about leveraging data and technology to drive efficiency and innovation. My experience in both engineering and management roles has equipped me with the ability to bridge technical details with strategic objectives.</p>
                     </div>
                     <div class="about-image">
-                        <img src="attached_assets/20240403-MSIS-00166.jpg" alt="Rubo Han" style="width: 300px; height: 300px; object-fit: cover; object-position: top center; border-radius: 10px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);">
+                        <img src="https://randomuser.me/api/portraits/men/75.jpg" alt="Rubo Han" style="width: 300px; height: 300px; object-fit: cover; object-position: top center; border-radius: 10px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);">
                     </div>
                 </div>
             </div>
